Fix misaligned styles

--- a/_sass/_podcast.scss
+++ b/_sass/_podcast.scss
@@ -1,6 +1,6 @@
 // Home page styles
 
-body#podcast {
+body#podcast-home {
 
 	main#content {
 		
